--- a/FCGagarin.DAL.Repositories.Interfaces/FCGagarin.DAL.Repositories.Interfaces.csproj
+++ b/FCGagarin.DAL.Repositories.Interfaces/FCGagarin.DAL.Repositories.Interfaces.csproj
@@ -49,11 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IArenaRepository.cs" />
     <Compile Include="IGenericRepository.cs" />
     <Compile Include="INewsRepository.cs" />
     <Compile Include="IPhotoAlbumRepository.cs" />
     <Compile Include="IPhotoRepository.cs" />
     <Compile Include="IRoundRepository.cs" />
+    <Compile Include="ITeamRepository.cs" />
+    <Compile Include="ITournamentRepository.cs" />
     <Compile Include="IUserProfileRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
