--- a/FCGagarin.DAL.Repositories/FCGagarin.DAL.Repositories.csproj
+++ b/FCGagarin.DAL.Repositories/FCGagarin.DAL.Repositories.csproj
@@ -64,12 +64,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArenaRepository.cs" />
     <Compile Include="GenericRepository.cs" />
     <Compile Include="NewsRepository.cs" />
     <Compile Include="PhotoAlbumRepository.cs" />
     <Compile Include="PhotoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundRepository.cs" />
+    <Compile Include="TeamRepository.cs" />
+    <Compile Include="TournamentRepository.cs" />
     <Compile Include="UserProfileRepository.cs" />
   </ItemGroup>
   <ItemGroup>
